--- a/Mosmak/Templates/about.html
+++ b/Mosmak/Templates/about.html
@@ -312,8 +312,8 @@
                   <h3>Your Next Adventure Awaits</h3>
                   <p>Be part of the adventure—travel responsibly and create memories with Mosmak Tours and Travel.</p>
                   <div class="cta-buttons">
-                    <a href="destinations.html" class="btn btn-primary me-3">Explore Our Destinations</a>
-                    <a href="contact.html" class="btn btn-outline">Chat with an Expert</a>
+                    <a href="{% url 'destinations' %}" class="btn btn-primary me-3">Explore Our Destinations</a>
+                    <a href="{% url 'contact' %}" class="btn btn-outline">Chat with an Expert</a>
                   </div>
                 </div>
               </div>
@@ -350,7 +350,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="d-flex align-items-center">
+          <a href="{% url 'index'%}" class="d-flex align-items-center">
             <span class="sitename">Mosmak</span>
           </a>
           <div class="footer-contact pt-3">
